Node editor's "Interface" panel shows in all tabs #61428

Closed
opened 2019-02-11 20:57:06 +01:00 by dima glib · 5 comments
Member

System Information
Operating system: Windows 7 (64 bit)
Graphics card: Radeon HD 8670D

Blender Version
Broken: 2.80, 69b2f52681, blender2.7, 2019-02-10, as found on the splash screen

Short description of error
When a node editor is inside of a node group, an "Interface" panel is visible in the right-side shelf in all tabs (expected behavior is that it's only visible in the Node tab)

Exact steps for others to reproduce the error
Open the attached file and run the script. A "Test Tab" tab will appear in the node editor, and it will contain "Node Editor Test" panel and "Interface" panel.nodegroup_interface_bug.blend

**System Information** Operating system: Windows 7 (64 bit) Graphics card: Radeon HD 8670D **Blender Version** Broken: 2.80, 69b2f5268114, blender2.7, 2019-02-10, as found on the splash screen **Short description of error** When a node editor is inside of a node group, an "Interface" panel is visible in the right-side shelf in all tabs (expected behavior is that it's only visible in the Node tab) **Exact steps for others to reproduce the error** Open the attached file and run the script. A "Test Tab" tab will appear in the node editor, and it will contain "Node Editor Test" panel and "Interface" panel.[nodegroup_interface_bug.blend](https://archive.blender.org/developer/F6581884/nodegroup_interface_bug.blend)
Author
Member

Added subscriber: @dairin0d

Added subscriber: @dairin0d
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Philipp Oeser self-assigned this 2019-02-12 11:28:55 +01:00
Member

Confirmed, checking...

Confirmed, checking...

This issue was referenced by 43139bf8b4

This issue was referenced by 43139bf8b4cd035995a7bb4a47abcb8d9c3c3e48
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#61428
No description provided.