Fix T61428: Node editor's 'Interface' panel shows in all tabs

Reviewers: brecht

Maniphest Tasks: T61428

Differential Revision: https://developer.blender.org/D4343